<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="Connect parameters" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/relativelayout1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectbutton"
            android:id="@+id/connect_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editIP"
            android:layout_marginTop="30dp"
            android:layout_marginStart="22dp"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView2"
            android:minWidth="200dp"
            android:nestedScrollingEnabled="false"
            android:inputType="text"
            android:text="@string/defaultip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterip"
            android:id="@+id/textView2"
            android:layout_marginStart="46dp"
            android:layout_alignBaseline="@+id/editIP"
            android:layout_alignBottom="@+id/editIP"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterport"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/editPort"
            android:layout_alignBottom="@+id/editPort"
            android:layout_toStartOf="@+id/editIP" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPort"
            android:textSize="18sp"
            android:minWidth="200dp"
            android:nestedScrollingEnabled="false"
            android:inputType="number"
            android:layout_below="@+id/editIP"
            android:layout_alignStart="@+id/editIP"
            android:text="@string/defaultport" />

    </RelativeLayout>

</RelativeLayout>
